--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@types/react-select": "^5.0.1",
+    "@types/react-select-country-list": "^2.2.3",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-select-country-list": "^2.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
